--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
       <div class="habits">
         <div class="habit" data-name="run">🏃</div>
         <div class="habit" data-name="water">🫗</div>
-        <div class="habit" data-name="food">🥝</div>
+        <div class="habit" data-name="food">🍎</div>
         <div class="habit" data-name="journal">📰</div>
         <div class="habit" data-name="pills">💊</div>
         <div class="habit" data-name="academy">💪</div>
         <div class="habit" data-name="boxe">🥊</div>
+        <div class="habit" data-name="sleep">🛌</div>
       </div>
 
       <div class="days"></div>
